# ezocr

./: custom_dataset.yaml  deprecated_dev.ipynb  deprecated_split.ipynb  deprecated_train.ipynb  hello.py  implementation.ipynb  pyproject.toml  split.ipynb  train.ipynb  train.py
dataset/base/: notes.json
dataset/base/labels/: 06a5bc9e-24.txt  0a68d98b-23.txt  0acb12d4-103.txt  0dd40c3a-113.txt  102117ea-214.txt  10987b34-126.txt  14239b71-102.txt  15d75139-111.txt  1cbb30a1-150.txt  1d1fa146-12.txt  24993f42-208.txt  2577149b-28.txt  278fec11-159.txt  280f6514-53.txt  29bfffaa-84.txt  2a4234e3-13.txt  3ad6fcff-127.txt  3f0b1f77-175.txt  4190b69d-38.txt  46dc2c29-198.txt  48d8587e-216.txt  49ad577c-156.txt  4f603bf0-164.txt  4f7c48e3-178.txt  4feae6f4-145.txt  50e3f46d-138.txt  5106072c-141.txt  52ebee25-152.txt  53c6ea9c-37.txt  5470a2b3-22.txt  554bc836-30.txt  5957acde-9.txt  60730085-26.txt  620d0b56-107.txt  62351681-179.txt  643c86ab-76.txt  6f2eb596-123.txt  773b339f-92.txt  7761d57e-64.txt  78a5434c-31.txt  (+61 more)
dataset/test/labels/: 22a3fa27-153.txt  264280f5-20.txt  5f1aeadc-109.txt  6b354cf1-125.txt  6faa3e8b-17.txt  75e7e37d-32.txt  9b8ad531-203.txt  a0b2a657-91.txt  b41ac787-131.txt  d49a4054-95.txt  d6d69253-88.txt  ea6900f2-97.txt
dataset/train/labels/: 0200258a-90.txt  04058f4e-29.txt  06ef3d37-49.txt  0c1a789e-158.txt  10e2768c-144.txt  1865ab50-40.txt  1b84154e-89.txt  1c89f0d8-56.txt  1eb42eeb-169.txt  21328a89-94.txt  23e1438f-69.txt  (+69 more)
examples/train/: labels.cache
examples/val/: labels.cache
package/: split.py  utils.py  viz_utils.py
(+46 files in other folders)
