[project]
name = "ezocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "albumentations>=1.4.24",
    "easyocr>=1.7.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "opencv-python>=4.10.0.84",
    "supervision>=0.24.0",
    "ultralytics>=8.3.56",
]
